Updates to correct issues arising in Desk Check - Updates styles for links   - Add `govuk-link` class to link in fact check email address   - Add custom style to links in 'received fact check' actions to reference `govuk-link` style   - Correct text colour for "Receive fact check" sections arising from extending the tag colour styles - Update some aspects of the vertical spacing on the page   - Remove padding from top of inset-text component   - Add space under heading   - Restore default spacing below the warning text - Improve accessibility:   - Render toggle as button   - Update JS module to add IDs and aria attributes

--- a/app/assets/stylesheets/history.scss
+++ b/app/assets/stylesheets/history.scss
@@ -1,14 +1,26 @@
 .history {
+  .gem-c-inset-text {
+    padding-top: 0;
+  }
+
   &__action--receive_fact_check__commment {
     .govuk-inset-text {
       @extend .govuk-tag--light-blue; // stylelint-disable-line scss/at-extend-no-missing-placeholder
+      color: $govuk-text-colour;
       word-break: break-word;
+    }
+
+    a {
+      @extend .govuk-link; // stylelint-disable-line scss/at-extend-no-missing-placeholder
     }
   }
 
-  &__action--receive_fact_check__warning {
-    .govuk-warning-text {
-      margin-bottom: 0;
-    }
+  &__action--receive_fact_check--toggle {
+    border-width: 0;
+    color: $govuk-link-colour;
+    background: none;
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
   }
 }
